--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,14 @@
 model:
   model_name: "qwen7b"
-  model_path: "C:\0store\LLM\Qwen2.5-3B-Instruct"
+  model_path: "/data/yyma/code/models/Qwen2.5-7B-Instruct"
   encoder_name: "bert"
-  encoder_path: "C:\0store\LLM\bert-base-cased"
+  encoder_path: "/data/yyma/code/models/bert-base-cased"
 
-
+data:
+  set_name: "ontonotes"
+seed: 2026
 
 stage:
-  pre_filter: true
-  train: true
+  pre_filter: false
+  train: false
   test: true
